2008-09-11  Akira TAGOH  <tagoh@redhat.com>

	Fix rhbz#460703.

	* applet/imsettings-applet.schema: Add a key.

	* applet/main.c (_preference_showicon_toggled): new.
	(_gconf_show_icon_cb): new.
	(_preference_activated): Add a check button to determine if the status
	icon is displayed.

	* backends/xim/proxy.c (_weak_notify_conn_cb): remove the communication
	window from hash when disconnecting. (rhbz#452849)

	* imsettings/imsettings-request.c (imsettings_request_what_im_is_running):
	Fix accessing an invalid pointer.

	* backends/xim/proxy.c: Fix freeze issues might happens when changing
	IM and reconnecting.

2008-09-10  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_lookup_ignorable_modifiers): new.
	(_grab_ungrab_with_ignorable_modifiers): new.
	(_keymap_changed): new.
	(filter_func): ignore certain modifiers.

2008-09-09  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_gconf_xsettings_cb): new
	(_gconf_trigger_key_cb): new.
	(_preference_grabbed): store the accel key into gconf.
	(_create_applet): setup the accel key.

2008-09-08  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_xsettings.c (main): Use libimsettings-xsettings.so
	instead of using xsettings API directly.

	* imsettings/imsettings-xsettings.[ch]: new for xsettings support.

	* applet/imsettings-applet.schema: Add a key for xsettings support.

	* applet/main.c (_xsettings_terminated): new for xsettings support.
	(_xsettings_update): likewise.
	(_preference_xsettings_toggled): likewise.
	(_preference_activated): Add a preference for xsettings support.

2008-09-05  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_set_property): set
	a default value for icon.

	* imsettings-uninstalled.pc.in (Requires): Add missing deps.

2008-09-04  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_focus): 
	ignore the event if it's brought up on reconnecting.
	(xim_proxy_protocol_real_xim_unset_ic_focus): likewise.
