@@ -1,3 +1,8 @@
+2008-09-12  Akira TAGOH  <tagoh@redhat.com>
+
+	* applet/main.c (_preference_grabbed): Store the value to gconf even
+	when the accel key is disabled.
+
 2008-09-11  Akira TAGOH  <tagoh@redhat.com>
 
 	Fix rhbz#460703.
